# naruto-auto-daily

./: .gitignore  CHANGELOG.md  CONTACT  CONTRIBUTING.md  LICENSE  PHASE6_FIX_REPORT.md  README.md  _tmp_a5_list.py  appsettings.json  get_cli.bat  get_cli.sh  interface.json  main.py  naruto-auto-daily.spec  pyproject.toml  requirements.txt  start.bat  start_cli.bat  workgroup.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: doc-coupling-check.yml  release.yml  test.yml
agent/: __init__.py  main.py
agent/custom/: __init__.py  action.py  reco.py  sink.py  utils.py
agent/custom/reco/: base.py  (+1 more)
agent/utils/: __init__.py  counter.py  logger.py
config/: app_config.yaml  device_config.yaml  schedule.json  task_registry.yaml
config/instances/: default.json
core/: __init__.py  app_paths.py  base_task.py  config_manager.py  logger.py  run_context.py  scheduler.py  screenshot_manager.py  screenshot_utils.py  state_machine.py  task_result.py  window_manager.py
device/: __init__.py  adb_client.py  types.py
docs/: 2026-07-20-cicd-release-design.md  COMPLETION_REPORT.md  MAF_CONFIG_FIX.md  MaaAutoNaruto_vs_NarutoAutoDaily_对比分析.md  PROJECT_PLAN.md  code-quality-optimization-plan.md  desktop_packaging_plan.md  maaframework_migration_design.md  maafw_migration_report_2026-07-02.md  maafw_stabilization_report_2026-07-02.md  narutomobile_back_main_screen_analysis.md  operation_flows.md  pipeline_override_v2_report_2026-07-02.md  项目准则.md
docs/calibration/: home_entry_paths.md  roi_calibration_log.md
docs/game_wiki/: README.md  abattle.md  activity.md  common_ui.md  daily_signin.md  fertile_land.md  group.md  group_signin.md  home.md  liveness.md  mail.md  popup.md  recruit.md  secret_realm.md  shop.md  team_assault.md  weekly_signin.md
docs/guide/: faq.md  index.md
docs/reviews/: 2026-07-20-last-week-review.md
docs/standards/: TASK_STANDARD.md  TASK_TEMPLATE.md  TEMPLATE_NAMING.md
frontend/: .gitkeep
frontend/MFAAvalonia/: interface.json
logging_ext/: __init__.py  run_context.py
maafw_bridge/: __init__.py  _actions_core.py  custom_actions.py  event_sink.py  pipeline_overrides.py  resource.py  task_mapping.py  tasker.py
recognition/: __init__.py  ocr_matcher.py  page_recognizer.py  template_matcher.py  types.py
recognizer/: __init__.py  page_recognizer.py
recovery/: __init__.py  recovery_manager.py  retry_manager.py
resources/templates/: manifest.json  template_manifest.json
schemes/: daily.json  weekly.json
state/: __init__.py  game_state.py  types.py
state_machine/: __init__.py  game_state_machine.py
tasks/: __init__.py  activity_task.py  advanture_task.py  assembly.py  common_actions.py  daily_signin_task.py  easy_helper_task.py  elite_instance_task.py  give_energy_task.py  group_signin_task.py  hundred_ninja_task.py  leaderboard_task.py  liveness_task.py  mail_task.py  mission_office_task.py  monthly_signin_task.py  more_gameplay_task.py  navigator.py  ninja_book_task.py  pipeline_runner.py  point_race_task.py  rebel_ninja_task.py  recruit_task.py  rich_room_task.py  secret_realm_task.py  shugyou_no_michi_task.py  sky_ground_task.py  stronghold_task.py  survival_challenge_task.py  task_engine.py  task_engine_maafw.py  team_dash_task.py  use_energy_task.py  weekly_signin_task.py  weekly_win_task.py
tasks/pure_actions/: __init__.py  go_into_entry_by_guide.py
tests/: __init__.py  _mock_adb.py  fixtures.py  test_adb_client.py  test_base_task.py  test_clean_logs.py  test_common_actions.py  test_config_dialog.py  test_config_manager.py  test_custom_actions.py  test_daily_signin_task.py  test_game_state_machine.py  test_group_signin.py  test_main.py  test_navigator_jumpback.py  test_ocr_matcher.py  test_page_recognizer.py  test_phase2_pipeline.py  test_phase3_pipeline.py  test_phase4_pipeline.py  test_phase5_pipeline.py  test_phase6_business_tasks.py  test_phase6_integration.py  test_pipeline.py  test_pipeline_overrides.py  test_pure_go_into_entry.py  test_recovery_manager.py  test_retry_manager.py  test_run_context.py  test_scheme_manager.py  test_state_machine.py  test_task_engine.py  test_task_mapping.py  test_template_matcher.py
tools/: _check_right_icons.py  _diagnose_business.py  _maafw_smoke.py  _smoke_all20.py  _smoke_core4.py  _smoke_real.py  _smoke_test.py  _test_param_fix.py  _user_snippet.py  _validation_3x_daily.py  _verify_mapping.py  analyze_award_center.py  audit_templates.py  bundle_python.py  calibrate_templates.py  capture_calibration.py  capture_template.py  dryrun_activity.py  dryrun_daily_signin.py  dryrun_group_signin.py  dryrun_liveness.py  dryrun_mail.py  dryrun_monthly_signin.py  dryrun_runner.py  dryrun_v2.py  dryrun_v3.py  dryrun_weekly_signin.py  fake_green_detect.py  find_and_tap.py  find_text_node.py  gen_11_tasks.py  generate_template_manifest.py  pre_gui_smoke.py  regen_task_registry.py  validate_templates.py
ui/: __init__.py  config_dialog.py  control_panel.py  log_panel.py  main_window.py  qt_log_handler.py  resource_status_panel.py  run_worker.py  run_worker_maafw.py  scheme_manager.py  status_panel.py  task_panel.py
(+27 files in other folders)
