[project]
name = "naruto-auto-daily"
version = "0.7.0"
description = "火影忍者手游日常任务自动化工具 — 基于 MaaFramework + narutomobile 模板引擎"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [
    { name = "naruto-auto-daily contributors" },
]

dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "numpy>=2.0",
    "Pillow>=10.0",
    "mss>=9.0",
    "psutil>=5.9",
    "pywin32>=306 ; sys_platform == 'win32'",
    "opencv-python-headless>=4.9",
    "maafw==5.10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
naruto-auto-daily = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "device",
    "logging_ext",
    "maafw_bridge",
    "recognition",
    "recognizer",
    "recovery",
    "state",
    "state_machine",
    "tasks",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

# ============================================================
# pytest 全局 addopts (2026-07-02,2026-07-11 调整)
# 3 个测试项依赖旧自研 Navigator/TaskEngine 或已删除模板,Phase 8 起走 MaaFramework 路径,
# 这些测试失去意义,默认 ignore / deselect。
# 恢复方式(临时): pytest tests/test_phase6_integration.py  # 单文件
# ============================================================
[tool.pytest.ini_options]
addopts = [
    "--ignore=tests/test_phase6_integration.py",
    "--ignore=tests/test_phase6_business_tasks.py",
    # 单条 stale 用例: 引用 2026-07-01 已删的 headhunt.png (user OK 过)
    "--deselect=tests/test_daily_signin_task.py::test_navigator_with_real_template_matched_in_screen",
]