[project]
name = "naruto-auto-daily"
version = "0.7.0"
description = "火影忍者手游日常任务自动化工具 — 基于 MaaFramework + narutomobile 模板引擎"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [
    { name = "naruto-auto-daily contributors" },
]

dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "numpy>=2.0",
    "Pillow>=10.0",
    "mss>=9.0",
    "psutil>=5.9",
    "pywin32>=306 ; sys_platform == 'win32'",
    "opencv-python-headless>=4.9",
    "onnxruntime>=1.18",  # recognition.ocr_matcher (DBNet + CRNN 本地 OCR)
    "maafw==5.10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
naruto-auto-daily = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "device",
    "logging_ext",
    "maafw_bridge",
    "recognition",
    "recognizer",
    "recovery",
    "state",
    "state_machine",
    "tasks",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

# ============================================================
# pytest 全局 addopts (2026-07-14 清理)
# 历史 --ignore 指向的 test_phase6_* / test_daily_signin_task.py 已删除,
# 2026-07-14 老 Navigator/TaskEngine + 27 死 task 全部清掉, 24 → 192 测试全过, 无需 ignore。
# ============================================================
[tool.pytest.ini_options]
addopts = []