[project]
name = "naruto-auto-daily"
version = "0.7.0"
description = "火影忍者手游日常任务自动化工具 — 基于 MaaFramework + MaaAutoNaruto 模板引擎"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [
    { name = "naruto-auto-daily contributors" },
]

dependencies = [
    "loguru==0.7.3",
    "pydantic==2.13.4",
    "PyYAML==6.0.3",
    "numpy==2.4.4",
    "Pillow==12.2.0",
    "mss==10.2.0",
    "psutil==7.2.2",
    "pywin32==312 ; sys_platform == 'win32'",
    "opencv-python-headless==4.13.0.92",
    "maafw==5.10.4",
    "onnxruntime==1.27.0",
    "notify-py==0.3.43",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
naruto-auto-daily = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agent",
    "core",
    "device",
    "maafw_bridge",
    "recognition",
    "tasks",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

# ============================================================
# pytest 全局 addopts (2026-07-15 P1-7 修)
# --ignore=frontend: frontend/MFAAvalonia/python/Lib/site-packages/
#   colorama / numpy / etc. 跟 pytest collection 冲突, 跑 tests/ 时自动跳过。
#   不用用户手动传 --ignore。
# ============================================================
[tool.pytest.ini_options]
addopts = [
    "--ignore=frontend",
]

# ============================================================
# 项目自定义配置 (2026-07-20 CI/CD 加)
# ============================================================
[tool.naruto-auto-daily]
# MFAAvalonia 独立版本(与 maafw 解耦,从 MaaXYZ/MFAAvalonia releases 取)
# CI 工作流 step 2 解析此字段拼下载 URL
mfaavalonia-version = "2.12.2"